AI assisted implementation of getRemainingMelds